--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 				<footer>
 
 						<div align="center"> 
-    <object type="text/html" data="http://0.0.0.0:5000/list" width="800px" height="600px">
+    <object type="text/html" data="http://fathomless-inlet-8852.herokuapp.com/list" width="800px" height="600px">
     </object></div>
 					<!--<a href="#first" class="button style2 scrolly">View the list</a>-->
 				</footer>
@@ -105,7 +105,7 @@
 					<h2>Add a new Farmer Record</h2>
 					<p></p>
 				</header>
-				<form method="post" action="http://0.0.0.0:5000/populate">
+				<form method="post" action="http://fathomless-inlet-8852.herokuapp.com/populate">
 					<div class="row half">
 						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
 						<div class="6u"><input type="text" class="text" name="vilname" placeholder="Village Name" /></div>
@@ -140,14 +140,6 @@
 				    <header>
 						<h3>Table</h3>
 					</header>
-					<div class="table-wrapper">
-						<table class="default">
-							<div> 
-    <object type="text/html" data="http://0.0.0.0:5000/list" width="800px" height="600px">
-    </object></div>
-						</table>
-					</div>
-
 		
 		<!-- Generic -->
 		<!--
